k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: udif-data-provider-deployment
  labels:
    app: udif-data-provider
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: udif-data-provider
  template:
    metadata:
      labels:
        app: udif-data-provider
    spec:
      containers:
        - name: udif-data-provider
          image: jackiezui/udif-data-provider:latest
          command: [ "flask", "run", "--host=0.0.0.0", "--port=5000" ]
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
        - name: celery-worker
          image: jackiezui/udif-data-provider:latest
          command: [ "celery", "-A", "app.celery.celery", "worker", "-l", "info" ]
          imagePullPolicy: Always
        - image: gcr.io/cloudsql-docker/gce-proxy:latest
          name: cloudsql-proxy
          command: [
              "/cloud_sql_proxy",
              "-instances=clture-production:us-central1:streamlytics-prod-server=tcp:5432",
              "-credential_file=/secrets/cloudsql/prod.json"
          ]
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
      volumes:
        - name: cloudsql-instance-credentials
          persistentVolumeClaim:
            claimName: app-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: udif-data-provider-service
  labels:
    app: udif-data-provider
spec:
  selector:
    app: udif-data-provider
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30025
