k8s/flower.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flower-deployment
  labels:
    app: flower
spec:
  selector:
    matchLabels:
      app: flower
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: flower
    spec:    
      containers:
      - name: flower
        image: mher/flower:0.9.5
        command: ["flower", "--broker=redis://$(REDIS_URL):6379", "--port=5555"]
        ports:
        - containerPort: 5555
---
apiVersion: v1
kind: Service
metadata:
  name: flower-service
spec:
  selector:
    app: flower
#  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 5555
    targetPort: 5555
#    nodePort: 30052
